--- a/Task5.html
+++ b/Task5.html
@@ -278,7 +278,7 @@ header {
 
       <div class="footer-box">
         <h3>Contact</h3>
-        <p>📍 Main road, Vejaywada, India</p>
+        <p>📍 Main road, Vijaywada, India</p>
         <p>📞 +91 8252787912</p>
         <p>✉ contact@bizbrand.com</p>
       </div>
